examples/test/testpolicy4667.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4667
  namespace: namespace490
spec:
  podSelector:
    matchLabels:
      key12: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value10
          key19: value39
      podSelector:
        matchLabels:
          key3: value16
          key37: value25
